--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "mongo": "^0.1.0",
+    "mongodb": "^5.7.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
