--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "next": {
+    "target": "serverless"
+  },
   "dependencies": {
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
